2012-08-21  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/interval_table.hh, music/ordered_ilist.hh: Introduced an
	interval table optimization variable MUSIC_ITABLE_FLAVOR with the
	options MUSIC_VANILLA, MUSIC_TRIMMED, MUSIC_COMPACT and
	MUSIC_SCATTERED explained at the top of music/interval_table.hh.

	* music/event_router.hh: #define MUSIC_ITABLE_FLAVOR to
	MUSIC_SCATTERED.

	* music/interval_table.hh (IntervalTable::search): Check index
	against tableSize_ instead of container size.

	* music/subconnector.hh, music/event_routing_map.hh: Don't
	#include <music/event_router.hh> which contains heavy template
	stuff. Instead forward declare EventRouter.  Since both
	subconnector.hh and event_routing_map.hh are included by other
	header files, this speeds up compilation and decreases the
	dependencies in the code tree.

	* connector.cc, event_routing_map.cc, port.cc, subconnector.cc:
	#include "music/event_router.hh".

	* runtime.cc (Runtime::tick): Only access first element of
	schedule if non-empty.
	(Runtime::finalize): Only do schedule-related processing if
	schedule initially non-empty.

	* Makefile.am: Added music/interval_table.hh,
	music/ordered_ilist.hh.

	* music/interval_table.hh, music/ordered_ilist.hh: New files.

	* music/event_router.hh: Use new IntervalTable template.

2012-08-19  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/event_routing_map.hh, event_routing_map.cc
	(EventRoutingMap::build): Removed. Replaced by fillRouter which is
	now public.

	music/port.hh (EventOutputPort::setupCleanup), port.cc
	(EventOutputPort::buildTable), connector.cc
	(EventInputCollectiveConnector::spatialNegotiation): Use
	EventRoutingMap::fillRouter and call EventRouter::buildTable
	directly. Delete the event routing map before calling buildTable
	so that the data structures used by buildTable don't co-exist in
	memory with the event routing map.

2012-08-18  Mikael Djurfeldt  <mikael@djurfeldt.com>
