@@ -1,3 +1,14 @@
+2012-08-22  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* event_routing_map.cc (OutputRoutingMap::fillRouter): Ask
+	EventRouter if it needs as few points as possible rather than as
+	few intervals as possible, and close gaps only in the latter case.
+	This is important when using the new table based routing together
+	with simulators with round-robin allocation, such as NEST.
+
+	* music/event_router.hh: Let table based routers say that they
+	need few points rather than intervals.
+
 2012-08-21  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* music/interval_table.hh, music/ordered_ilist.hh: Introduced an
